# subshifter

./: .gitignore  CMakeLists.txt  main.cpp  subtitle_shifter.cpp  subtitle_shifter.h  time_stamp.h
test_files/: american_psycho.srt  test.srt  the_godfather.srt
